--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
  
 </div>
 
+<div id="loader-wrapper2">
+    <div id="loader2">
+    	<div class="sk-folding-cube">
+  <div class="sk-cube1 sk-cube"></div>
+  <div class="sk-cube2 sk-cube"></div>
+  <div class="sk-cube4 sk-cube"></div>
+  <div class="sk-cube3 sk-cube"></div>
+</div>
+    	
+    </div>
+ 	
+</div>
+
 <!--
 
 -->
