--- a/index.html
+++ b/index.html
@@ -483,15 +483,14 @@ Nghiêm cấp trang điểm. Hãy chắc chắn rằng bạn không trang điể
 	
 </div>
 
-<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+<div class="modal fade modal-block" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
   <div class="modal-dialog " role="document">
     <div class="modal-content">
       	<div class="modal-header">
-      		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-      		<h4 class="modal-title"></h4>
+			<button type="button" class="close" data-dismiss="modal" ><span aria-hidden="true">&times;</span></button>
       	</div>
-      	<div class="modal-body">
-      		<p></p>
+      	<div class="modal-body modal-text">
+      		<p style="line-height: 1.5em"></p>
       	</div>
     </div>
   </div>
